...
  object GalleryButtonTag {
    const val SINGLE_TAG = "singleGalleryButtonTag"
    const val MULTIPLE_TAG = "multipleGalleryButtonTag"
  }

  object CustomLocationDialogTags {
    const val DIALOG_TITLE = "customLocationDialogTitle"
    const val LOCATION_TEXT_FIELD = "customLocationDialogTextField"
    const val CONFIRM_BUTTON = "customLocationDialogConfirmButton"
    const val CLOSE_BUTTON = "customLocationDialogCloseButton"
    const val DROPDOWN_MENU = "customLocationDialogDropdownMenu"

    fun locationSuggestion(index: Int): String = "customLocationDialogSuggestion$index"

    const val MORE_OPTION = "customLocationDialogMoreOption"
...
